- allow scrolling on mobile nav overlay - fixed height of mobile nav links, closes #50 - version bump

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -229,6 +229,7 @@ header
   left: 0
   list-style: none
   margin: 0
+  overflow: auto
   padding: 15%
   position: fixed
   text-align: center
@@ -261,8 +262,13 @@ header
     padding: 0
     
   li
-    height: 88px
+    height: auto
+    line-height: 30px
     margin-left: 0
+    
+    a
+      display: block
+      padding: 15px 0
 
 .slideshow
   display: block
